--- a/public/css/formn.css
+++ b/public/css/formn.css
@@ -870,16 +870,21 @@ textarea:focus {padding:8px 35px 0 30px !important}
 .tabs {
   
    color: rgb(255, 255, 255);
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   /* display: flex; */
+   /* justify-content: center;
+   align-items: center; */
+ margin-top: 50px;
+ margin-bottom: 50px;
+   
+   
    
 }
 
 .tabs span {
   background: rgb(191, 207, 192);
-  padding: 10px;
-  border: 1px solid rgb(255, 255, 255);
+  padding: 18px 30px;
+    
+  border: 1px solid rgb(19, 16, 16);
   border-radius: 5px;
 }
 
